level.html + align fixed/banner changed + footer-logo changed

--- a/style.css
+++ b/style.css
@@ -19,9 +19,40 @@ ul, ol{
 }
 
 .navbar{
-    background: linear-gradient(to right, rgba(255,255,255,.4), rgba(200,200,200,.4));
+    background: linear-gradient(to right, rgba(255,255,255,.9), rgba(200,200,200,.4));
     box-shadow: #44315D 0.1rem 0.1rem 0.5rem;
 }
+
+/* FOOTER */
+
+footer{
+    background-color: #44315D;
+    background-image: url(./images/scotland.jpg);
+    background-position: bottom;
+    color: ghostwhite;
+    margin-top: 10rem;
+    width: 100vw;
+}
+
+    .footer__logoChico{
+        color: white;
+        font-family: Sacramento, PT Sans, sans-serif;
+        font-weight: 400;
+        font-size: 1.5rem;
+        width: fit-content;
+        height: fit-content;
+        margin: 1rem 0 0 1rem;
+    }
+
+    .footer__navbar{
+        margin: 1rem 0 1rem 1rem;
+        line-height: 1.4rem;
+        display: inline-block;
+    }
+
+    .footer__navbar .footer__list .footer__list-item:hover, .prices__link--hover:hover, .mainContent__link--hover:hover{
+        color: #d58f3f;
+    }
 
 /**************************** INDEX ****************************/
 
@@ -41,14 +72,15 @@ ul, ol{
 /* BANNER */
 
 .banner{
-    margin-top: 10%;
+    margin-top: 6rem;
 }
 
     .banner__text{
-        font-size: 6rem;
+        font-size: 5rem;
+        line-height: 7rem;
         font-weight: 500;
         color: white;
-        text-shadow: #44315D 1rem 6rem 0.8rem;
+        text-shadow: #44315D 0 6rem 0.8rem;
     }
 
     .banner__longertext{
@@ -60,7 +92,7 @@ ul, ol{
     }
 
     .banner__p{
-        font-size: x-large;
+        font-size: large;
     }
 
     .index__button{
@@ -85,7 +117,8 @@ ul, ol{
     .video__title{
         color: #ffffff;
         font-weight: 700;
-        font-size: xxx-large;
+        font-size: xx-large;
+        width: 100vw;
         border-top: white solid 0.5rem;
         border-bottom: white solid 0.5rem;
         overflow: hidden;
@@ -101,42 +134,6 @@ ul, ol{
     .video__title:hover{
         background-position: 0 100%;
     }
-
-/* FOOTER */
-
-footer{
-    background-color: #44315D;
-    background-image: url(./images/scotland.jpg);
-    background-position: bottom;
-    color: ghostwhite;
-    margin-top: 10rem;
-}
-
-    .footer__logoChico{
-        color: white;
-        font-family: Sacramento, PT Sans, sans-serif;
-        font-weight: 400;
-        font-size: 2rem;
-        width: fit-content;
-        height: fit-content;
-        background-color: #4c21c2;
-        padding: 0.7rem 0.6rem 0 0.6rem;
-        border-radius: 2%;
-        margin: 1rem 0 0 1rem;
-    }
-
-    .footer__navbar{
-        margin: 1rem 0 1rem 10rem;
-        line-height: 1.4rem;
-        display: inline-block;
-    }
-
-    .footer__navbar .footer__list .footer__list-item:hover, .prices__link--hover:hover, .mainContent__link--hover:hover{
-        color: #d58f3f;
-    }
-
-
-
 
 /******************* ABOUT LEAN *******************/
 
@@ -189,6 +186,71 @@ footer{
     background-size: cover;
 }
 
+/******************* LEVEL *******************/
+
+
+.levelForm__fieldset{
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    border-radius: 2%;
+    background: linear-gradient(45deg, rgba(222, 235, 35, 0.8), rgba(59, 150, 202, 0.8));
+    padding: 1rem;
+}
+
+.levelForm__innerfield{
+    margin: 0.5rem;
+    display: flex;
+    flex-direction: column;
+}
+    
+.levelForm__legend{
+    font-size: 120%;
+    box-shadow: 0.2rem 0.2rem 0.2rem rgb(98, 68, 102);
+    background-color: white;
+    border-radius: 10px;
+    padding: 0.1rem 0.5rem 0.1rem 0.5rem;
+    width: 12rem;
+    display: flex;
+    justify-content: center;
+}
+
+.levelForm__checkbox{
+    padding-top: 0.5rem;
+    display: flex;
+    flex-direction: column;
+}
+
+.levelForm__checkboxText{
+    display: flex;
+    flex-direction: row;
+    column-gap: 0.2rem;
+}
+
+.levelForm__botones{
+    display: flex;
+    flex-direction: row;
+    column-gap: 2.5rem;
+    font-size: large;
+    border: none;
+    padding: 1rem;
+}
+
+.levelForm__submit{
+    background-color: rgb(59, 150, 202);
+    color: #ffffff;
+    width: 4rem;
+    height: 2rem;
+    line-height: normal;
+}
+
+.levelForm__reset{
+    background-color: #ffffff;
+    color: rgb(59, 150, 202);
+    width: 4rem;
+    height: 2rem;
+    line-height: normal;
+}
 
 
 /******************* PRICING *******************/
@@ -275,23 +337,11 @@ legend{
     font-weight: 600;
 }
 
-fieldset{
-    padding-bottom: 10px;
+.form__fieldset{
     width: 70%;
     display: flex;
     flex-direction: column;
     border-radius: 2%;
-}
-
-.form__fieldset1{
-    background: linear-gradient(to right, rgba(35, 221, 235, .6), rgba(145, 59, 202, .6));
-    padding: 1rem;
-}
-.form__fieldset2{
-    background: linear-gradient(to right, rgba(35, 221, 235, .6), rgba(145, 59, 202, .6));
-    padding: 1rem;
-}
-.form__fieldset3{
     background: linear-gradient(to right, rgba(35, 221, 235, .6), rgba(145, 59, 202, .6));
     padding: 1rem;
 }
@@ -338,7 +388,7 @@ legend{
     padding: 1rem;
 }
 
-#reset{
+.form__reset{
     background-color: white;
     color: #692dad;
     width: 4rem;
@@ -346,7 +396,7 @@ legend{
     line-height: normal;
 }
 
-#submit{
+.form__submit{
     background-color: #692dad;
     color: white;
     width: 4rem;
@@ -364,4 +414,8 @@ legend{
         font-size: 700%;
     }
     
+    .levelForm__fieldset{
+        width: 60%;
+    }
+
 }
